Default value for RotationDelayInSeconds is defined in XAML and callback method implemented.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
@@ -31,5 +31,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="RotationDelayInSeconds">
+        </Setter>
     </Style>
 </ResourceDictionary>
