Setter.Value is fixed.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
@@ -32,6 +32,7 @@
             </Setter.Value>
         </Setter>
         <Setter Property="RotationDelayInSeconds">
+            <Setter.Value>5</Setter.Value>
         </Setter>
     </Style>
 </ResourceDictionary>
