--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/FadeHeader/FadeHeaderBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/FadeHeader/FadeHeaderBehaviorPage.xaml
@@ -1,17 +1,16 @@
-﻿<Page 
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.FadeHeaderBehaviorPage"
-    mc:Ignorable="d">
+﻿<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+      xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Animations.Behaviors"
+      x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.FadeHeaderBehaviorPage"
+      mc:Ignorable="d">
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListView x:Name="MyListView">
-            <interactivity:BehaviorCollection>
+            <interactivity:Interaction.Behaviors>
                 <behaviors:FadeHeaderBehavior HeaderElement="{Binding ElementName=MyHeaderGrid}" />
-            </interactivity:BehaviorCollection>
+            </interactivity:Interaction.Behaviors>
             <ListView.Header>
                 <Grid x:Name="MyHeaderGrid"
                       Height="150"
@@ -42,11 +41,11 @@
                                Height="50"
                                Width="50"
                                Grid.Column="0"
-                               Margin="10"/>
+                               Margin="10" />
                         <TextBlock Text="{Binding}"
                                    Grid.Column="1"
                                    TextTrimming="CharacterEllipsis"
-                                   VerticalAlignment="Center"/>
+                                   VerticalAlignment="Center" />
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
