--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/FadeHeader/FadeHeaderBehaviorPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/FadeHeader/FadeHeaderBehaviorPage.xaml
@@ -9,22 +9,26 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListView x:Name="MyListView">
             <interactivity:Interaction.Behaviors>
-                <behaviors:FadeHeaderBehavior HeaderElement="{Binding ElementName=MyHeaderGrid}" />
+                <behaviors:FadeHeaderBehavior />
             </interactivity:Interaction.Behaviors>
             <ListView.Header>
                 <Grid x:Name="MyHeaderGrid"
-                      Height="150"
+                      MinHeight="250"
                       Background="{StaticResource Brush-Blue-01}">
-                    <StackPanel HorizontalAlignment="Center"
-                                VerticalAlignment="Center">
-                        <TextBlock Text="This is the header"
+                    <StackPanel VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Margin="20,0">
+                        <TextBlock Text="This Is The Header"
                                    TextAlignment="Center"
                                    FontWeight="Bold"
                                    Style="{ThemeResource TitleTextBlockStyle}"
-                                   Foreground="{StaticResource Brush-White}" />
-                        <TextBlock Text="It will fade as you scroll up"
+                                   Foreground="{StaticResource Brush-White}"
+                                   Margin="0,5" />
+                        <TextBlock Text="It starts with 100% opacity but will fade to 0% as you scroll up."
                                    Style="{ThemeResource SubtitleTextBlockStyle}"
-                                   Foreground="{StaticResource Brush-White}" />
+                                   Foreground="{StaticResource Brush-White}"
+                                   VerticalAlignment="Center"
+                                   TextAlignment="Center" />
                     </StackPanel>
                 </Grid>
             </ListView.Header>
