--- a/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RotatorTile/RotatorTile.xaml
@@ -31,5 +31,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Setter Property="MinRandomDuration" Value="5" />
+        <Setter Property="MaxRandomDuration" Value="10" />
     </Style>
 </ResourceDictionary>
