Update GridSplitter template and removing unused properties

--- a/Microsoft.Toolkit.Uwp.UI.Controls/GridSplitter/GridSplitter.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/GridSplitter/GridSplitter.xaml
@@ -8,11 +8,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="local:GridSplitter">
                     <Grid Background="{TemplateBinding Background}">
-
-                        <ContentPresenter VerticalAlignment="Stretch"
-                                          Content="{TemplateBinding Element}"/>
+                        <ContentPresenter Content="{TemplateBinding Element}"/>
                     </Grid>
-
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
