--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Loading/LoadingPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Loading/LoadingPage.xaml
@@ -1,28 +1,72 @@
 ﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.Loading.LoadingPage"
+    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.LoadingPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.Loading"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="DefaultTemplate">
+                <StackPanel Orientation="Horizontal" Padding="12">
+                    <Grid Margin="0,0,8,0">
+                        <Image Source="../../Assets/ToolkitLogo.png" Height="50" />
+                        <ProgressRing IsActive="True" Foreground="Blue" />
+                    </Grid>
+                    <TextBlock Text="It's ok, we are working on it :)" VerticalAlignment="Center" />
+                </StackPanel>
+            </DataTemplate>
+            <DataTemplate x:Key="AhotnerTemplate">
+                <StackPanel Orientation="Horizontal" Padding="12">
+                    <Grid Margin="0,0,8,0">
+                        <ProgressRing IsActive="True" Foreground="Aqua" />
+                    </Grid>
+                    <TextBlock Text="It's ok, we are working on it :)" VerticalAlignment="Center" />
+                </StackPanel>
+            </DataTemplate>
+        </ResourceDictionary>
+    </Page.Resources>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ToggleButton Content="ToggleIsLoading" Tapped="ShowLoadingDialogDelegateAsync"/>
-        <controls:Loading IsLoading="{x:Bind IsBusy}" LoadingHorizontalAlignment="Left" LoadingVerticalAlignment="Bottom"
-                                       LoadingBackground="White" LoadingOpacity="0.5">
-            <controls:Loading.LoadingContent>
-                <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Padding="12">
-                        <Grid Margin="0,0,8,0">
-                            <Image Source="../../Assets/ToolkitLogo.png" Height="50"/>
-                            <ProgressRing IsActive="True"/>
-                        </Grid>
-                        <TextBlock Text="You can go to drink a coffee, we are working on it :)" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </DataTemplate>
-            </controls:Loading.LoadingContent>
+
+        <StackPanel Margin="20">
+
+            <ToggleButton Content="Start long calculation..." Tapped="ShowLoadingDialogDelegateAsync"
+                          HorizontalAlignment="Stretch" />
+
+            <RichTextBlock Margin="0,10,0,0" Foreground="{StaticResource Brush-Grey-03}">
+                <Paragraph>Loading control helps to show any xaml content with animation to the user while the app is doing some calculation.</Paragraph>
+                <Paragraph />
+                <Paragraph FontSize="12">
+                    An example of the xaml for Loading control.
+                </Paragraph>
+            </RichTextBlock>
+
+            <GridView
+                x:Name="GridViewControl"
+                Tapped="GridViewControl_OnTapped">
+                <GridView.ItemTemplate>
+                    <DataTemplate>
+                        <ContentControl ContentTemplate="{Binding}"></ContentControl>
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+                <GridView.ItemContainerStyle>
+                    <Style TargetType="GridViewItem">
+                        <Setter
+                            Property="HorizontalAlignment"
+                            Value="Stretch" />
+                        <Setter
+                            Property="VerticalAlignment"
+                            Value="Stretch" />
+                    </Style>
+                </GridView.ItemContainerStyle>
+            </GridView>
+        </StackPanel>
+
+        <controls:Loading x:Name="LoadingControl" LoadingHorizontalAlignment="Left" LoadingVerticalAlignment="Bottom"
+                          LoadingBackground="White" LoadingOpacity="{Binding OpacityForLoadingControl.Value}">
         </controls:Loading>
     </Grid>
 </Page>
