Added StepSize and IsInteractive to RadialGauge.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/RadialGauge/RadialGauge.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/RadialGauge/RadialGauge.xaml
@@ -9,7 +9,8 @@
                     <Viewbox>
                         <Grid x:Name="PART_Container"
                               Height="200"
-                              Width="200">
+                              Width="200"
+                              Background="Transparent">
 
                             <!-- Scale -->
                             <Path Name="PART_Scale"
