--- a/Microsoft.Toolkit.Uwp.UI.Controls/AdaptiveGridView/AdaptiveGridView.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/AdaptiveGridView/AdaptiveGridView.xaml
@@ -1,27 +1,36 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
-	<Style TargetType="controls:AdaptiveGridView">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
+    <Style TargetType="controls:AdaptiveGridView">
         <Setter Property="Template">
             <Setter.Value>
-				<ControlTemplate TargetType="controls:AdaptiveGridView">
+                <ControlTemplate TargetType="controls:AdaptiveGridView">
                     <Grid>
-						<ContentPresenter x:Name="templateProxy" Width="{TemplateBinding ItemWidth}" Height="{TemplateBinding ItemHeight}" ContentTemplate="{TemplateBinding ItemTemplate}" Visibility="Collapsed" />
-                        <GridView HorizontalAlignment="Stretch" x:Name="ListView"
+                        <ContentPresenter Width="{TemplateBinding ItemWidth}"
+                                          Height="{TemplateBinding ItemHeight}"
+                                          x:Name="templateProxy"
+                                          ContentTemplate="{TemplateBinding ItemTemplate}"
+                                          Visibility="Collapsed" />
+                        <GridView HorizontalAlignment="Stretch"
+                                  x:Name="ListView"
                                   IsItemClickEnabled="{TemplateBinding IsItemClickEnabled}"
-                                  SelectionMode="{TemplateBinding SelectionMode}"
                                   IsSwipeEnabled="False"
                                   IsTabStop="False"
-                                  ScrollViewer.VerticalScrollMode="{TemplateBinding VerticalScrollMode}"
+                                  ItemsSource="{TemplateBinding ItemsSource}"
                                   ScrollViewer.VerticalScrollBarVisibility="Hidden"
-                                  ItemsSource="{TemplateBinding ItemsSource}">
+                                  ScrollViewer.VerticalScrollMode="{TemplateBinding VerticalScrollMode}"
+                                  SelectionMode="{TemplateBinding SelectionMode}">
                             <GridView.ItemTemplate>
                                 <DataTemplate>
-									<ContentPresenter Width="{Binding Width, ElementName=templateProxy}" Height="{Binding Height, ElementName=templateProxy}" ContentTemplate="{Binding ContentTemplate, ElementName=templateProxy}" />
-								</DataTemplate>
+                                    <ContentPresenter Width="{Binding Width,
+                                                                      ElementName=templateProxy}"
+                                                      Height="{Binding Height,
+                                                                       ElementName=templateProxy}"
+                                                      ContentTemplate="{Binding ContentTemplate,
+                                                                                ElementName=templateProxy}" />
+                                </DataTemplate>
                             </GridView.ItemTemplate>
-                        </GridView> 
+                        </GridView>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
