--- a/Microsoft.Toolkit.Uwp.UI.Controls/BladeControl/BladeControl.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/BladeControl/BladeControl.xaml
@@ -11,13 +11,13 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:BladeControl">
-                    <GridView Name="BladeContainer"
-                              VerticalContentAlignment="Stretch"
+                    <GridView VerticalContentAlignment="Stretch"
                               Background="{TemplateBinding Background}"
                               BorderBrush="{TemplateBinding BorderBrush}"
                               BorderThickness="{TemplateBinding BorderThickness}"
                               IsItemClickEnabled="False"
                               ItemsSource="{TemplateBinding ActiveBlades}"
+                              Name="BladeContainer"
                               SelectionMode="None"
                               Style="{StaticResource HorizontalGridView}">
                         <GridView.ItemsPanel>
@@ -28,6 +28,25 @@
                         <GridView.ItemContainerStyle>
                             <Style TargetType="GridViewItem">
                                 <Setter Property="VerticalContentAlignment" Value="Stretch" />
+                                <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
+                                <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
+                                <Setter Property="Background" Value="Transparent" />
+                                <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
+                                <Setter Property="TabNavigation" Value="Local" />
+                                <Setter Property="IsHoldingEnabled" Value="True" />
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                                <Setter Property="HorizontalAlignment" Value="Stretch" />
+                                <Setter Property="VerticalAlignment" Value="Stretch" />
+                                <Setter Property="Margin" Value="0,0,4,4" />
+                                <Setter Property="MinWidth" Value="{ThemeResource GridViewItemMinWidth}" />
+                                <Setter Property="MinHeight" Value="{ThemeResource GridViewItemMinHeight}" />
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="GridViewItem">
+                                            <ContentPresenter />
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
                             </Style>
                         </GridView.ItemContainerStyle>
                     </GridView>
@@ -59,14 +78,14 @@
                                        VerticalAlignment="Center"
                                        Foreground="{TemplateBinding TitleBarForeground}"
                                        Text="{TemplateBinding Title}" />
-                            <Button Name="CloseButton"
-                                    Grid.Column="1"
+                            <Button Grid.Column="1"
                                     HorizontalAlignment="Right"
                                     AutomationProperties.Name="Cancel"
                                     Background="{TemplateBinding CloseButtonBackground}"
                                     Content="&#xE711;"
                                     FontFamily="Segoe MDL2 Assets"
-                                    Foreground="{TemplateBinding CloseButtonForeground}" />
+                                    Foreground="{TemplateBinding CloseButtonForeground}"
+                                    Name="CloseButton" />
                         </Grid>
 
                         <ContentPresenter Grid.Row="1"
