--- a/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/SlidableListItem/SlidableListItem.xaml
@@ -1,40 +1,55 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
 
-    <Style TargetType="controls:SlidableListItem" >
-        <Setter Property="LeftForeground" Value="White"></Setter>
-        <Setter Property="RightForeground" Value="White"></Setter>
-        <Setter Property="VerticalAlignment" Value="Stretch"></Setter>
-        <Setter Property="Background" Value="White"></Setter>
-        <Setter Property="ActivationWidth" Value="80"></Setter>
+    <Style TargetType="controls:SlidableListItem">
+        <Setter Property="LeftForeground" Value="White" />
+        <Setter Property="RightForeground" Value="White" />
+        <Setter Property="VerticalAlignment" Value="Stretch" />
+        <Setter Property="Background" Value="White" />
+        <Setter Property="ActivationWidth" Value="80" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="controls:SlidableListItem">
                     <Grid>
-                        <Grid x:Name="CommandContainer" Margin="1" x:DeferLoadStrategy="Lazy">
-                            <StackPanel x:Name="LeftCommandPanel" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
-                                <SymbolIcon Symbol="{TemplateBinding LeftIcon}" Foreground="{TemplateBinding LeftForeground}"></SymbolIcon>
-                                <TextBlock FontSize="15" Margin="10,0,0,0" Text="{TemplateBinding LeftLabel}" Foreground="{TemplateBinding LeftForeground}"></TextBlock>
+                        <Grid Margin="1"
+                              x:DeferLoadStrategy="Lazy"
+                              x:Name="CommandContainer">
+                            <StackPanel HorizontalAlignment="Left"
+                                        VerticalAlignment="Center"
+                                        x:Name="LeftCommandPanel"
+                                        Orientation="Horizontal">
+                                <SymbolIcon Foreground="{TemplateBinding LeftForeground}" Symbol="{TemplateBinding LeftIcon}" />
+                                <TextBlock Margin="10,0,0,0"
+                                           FontSize="15"
+                                           Foreground="{TemplateBinding LeftForeground}"
+                                           Text="{TemplateBinding LeftLabel}" />
                                 <StackPanel.RenderTransform>
-                                    <CompositeTransform></CompositeTransform>
+                                    <CompositeTransform />
                                 </StackPanel.RenderTransform>
                             </StackPanel>
 
-                            <StackPanel x:Name="RightCommandPanel" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
-                                <TextBlock FontSize="15" Margin="0,0,10,0" Text="{TemplateBinding RightLabel}" Foreground="{TemplateBinding RightForeground}"></TextBlock>
-                                <SymbolIcon Symbol="{TemplateBinding RightIcon}" Foreground="{TemplateBinding RightForeground}"></SymbolIcon>
+                            <StackPanel HorizontalAlignment="Right"
+                                        VerticalAlignment="Center"
+                                        x:Name="RightCommandPanel"
+                                        Orientation="Horizontal">
+                                <TextBlock Margin="0,0,10,0"
+                                           FontSize="15"
+                                           Foreground="{TemplateBinding RightForeground}"
+                                           Text="{TemplateBinding RightLabel}" />
+                                <SymbolIcon Foreground="{TemplateBinding RightForeground}" Symbol="{TemplateBinding RightIcon}" />
                                 <StackPanel.RenderTransform>
-                                    <CompositeTransform></CompositeTransform>
+                                    <CompositeTransform />
                                 </StackPanel.RenderTransform>
                             </StackPanel>
                         </Grid>
-                        <Grid ManipulationMode="TranslateX,System" x:Name="ContentGrid" Background="{TemplateBinding Background}">
-                            <ContentPresenter />
+                        <Grid x:Name="ContentGrid"
+                              Background="{TemplateBinding Background}"
+                              ManipulationMode="TranslateX,System">
                             <Grid.RenderTransform>
-                                <CompositeTransform x:Name="ContentTransform"/>
+                                <CompositeTransform x:Name="ContentTransform" />
                             </Grid.RenderTransform>
+                            <ContentPresenter />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
