--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Loading/LoadingPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Loading/LoadingPage.xaml
@@ -15,7 +15,7 @@
                         <Image Source="../../Assets/ToolkitLogo.png" Height="50" />
                         <ProgressRing IsActive="True" Foreground="Blue" />
                     </Grid>
-                    <TextBlock Text="It's ok, we are working on it :)" VerticalAlignment="Center" />
+                    <TextBlock Text="It's ok, we are working on it :)" Foreground="Black" VerticalAlignment="Center" />
                 </StackPanel>
             </DataTemplate>
             <DataTemplate x:Key="AhotnerTemplate">
@@ -23,7 +23,7 @@
                     <Grid Margin="0,0,8,0">
                         <ProgressRing IsActive="True" Foreground="Aqua" />
                     </Grid>
-                    <TextBlock Text="It's ok, we are working on it :)" VerticalAlignment="Center" />
+                    <TextBlock Text="It's ok, we are working on it :)" Foreground="Black" VerticalAlignment="Center" />
                 </StackPanel>
             </DataTemplate>
         </ResourceDictionary>
@@ -68,6 +68,7 @@
         <controls:Loading x:Name="LoadingControl" LoadingHorizontalAlignment="{Binding LoadingContentHorizontalAlignment.Value}" 
                           LoadingVerticalAlignment="{Binding LoadingContentVerticalAlignment.Value}"
                           LoadingBackground="{Binding LoadingBackground.Value}" LoadingOpacity="{Binding OpacityForLoadingControl.Value}">
+            <ContentControl x:Name="LoadingContentControl"/>
         </controls:Loading>
     </Grid>
 </Page>
