--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MicrosoftGraph Service/MicrosoftGraphPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MicrosoftGraph Service/MicrosoftGraphPage.xaml
@@ -99,10 +99,11 @@
 
                         <StackPanel Grid.Row="1" Margin="24" x:Name="MessagesPanel">
                             <TextBox Header="#Top:" x:Name="TopText" Margin="0,0,0,12" InputScope="Number"/>
-                            <Button Content="Get Messages" x:Name="GetMessagesButton"  Margin="0,10,0,0" Click="GetMessagesButton_Click"></Button>
+                            <Button Content="Get Messages" x:Name="GetMessagesButton"  Margin="0,10,0,0" Click="GetMessagesButton_Click" Width="148"></Button>
+                            <Button Content="Get Next Messages" x:Name="GetNextMessagesButton" Visibility="Collapsed"  Margin="0,20,0,0" Click="GetNextMessagesButton_Click"></Button>
                         </StackPanel>
                     </Grid>
-                 <ListView x:Name="MessagesList" Grid.Row="3" >
+         <ListView x:Name="MessagesList" Grid.Row="3" IncrementalLoadingThreshold="1" IncrementalLoadingTrigger="Edge">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
