--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Facebook Service/FacebookPage.xaml
@@ -45,7 +45,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    
+
                     <!-- Credentials area -->
                     <Grid >
                         <Grid.RowDefinitions>
@@ -64,13 +64,14 @@
 
                         <StackPanel x:Name="CredentialsBox" Orientation="Vertical" Margin="24" Grid.Row="1">
                             <TextBox Header="App ID" x:Name="AppIDText" Margin="0,0,0,12"/>
+                            <HyperlinkButton Content="Show me how to get this ID" NavigateUri="https://developer.microsoft.com/en-us/windows/uwp-community-toolkit/services/facebook" Margin="0,0,0,15"></HyperlinkButton>
                             <StackPanel Orientation="Horizontal">
                                 <ComboBox x:Name="QueryType" Header="Type:"></ComboBox>
                                 <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="10,0,0,0" VerticalAlignment="Bottom"></Button>
                             </StackPanel>
                         </StackPanel>
                     </Grid>
-                    
+
                     <!-- Share to Facebook -->
                     <Grid Grid.Row="1" x:Name="ShareBox">
                         <Grid.RowDefinitions>
