--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Twitter Service/TwitterPage.xaml
@@ -78,7 +78,8 @@
                             </Grid>
 
                             <StackPanel x:Name="CredentialsBox" Orientation="Vertical" Margin="24" Grid.Row="1">
-                                <TextBox Header="Consumer Key:" x:Name="ConsumerKey" Margin="0,0,0,12"/>
+                                <HyperlinkButton Content="Show me how to get these values" NavigateUri="https://developer.microsoft.com/en-us/windows/uwp-community-toolkit/services/twitter" Margin="0,0,0,15"></HyperlinkButton>
+                            <TextBox Header="Consumer Key:" x:Name="ConsumerKey" Margin="0,0,0,12"/>
                                 <TextBox Header="Consumer Secret:" x:Name="ConsumerSecret" Margin="0,0,0,12"/>
                                 <TextBox Header="Callback URI:" x:Name="CallbackUri" Margin="0,0,0,12"/>
                                 <Button Content="Connect" x:Name="ConnectButton" Click="ConnectButton_OnClick" Margin="0,10,0,0" VerticalAlignment="Bottom"></Button>
