Adding Resize Behavior to GridSplitter for Test

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -31,8 +31,9 @@
             
                 Width="11"
                 Background="Gray"
-            Grid.Column="{Binding Column.Value}"
-          ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay}"
+                Grid.Column="{Binding Column.Value}"
+                ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay}"
+                ResizeBehavior="{Binding ResizeBehavior.Value,Mode=TwoWay}"
                 Foreground="White" 
                 FontSize="13">
         </controls:GridSplitter>
