--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
@@ -13,8 +13,16 @@
                     <ColumnDefinition Width="48" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <FontIcon Grid.Column="0" Margin="12,12,11,12" FontFamily="Segoe MDL2 Assets" Glyph="{Binding Glyph}" Foreground="White" />
-                <TextBlock Grid.Column="1" Text="{x:Bind Label}" Foreground="White" FontSize="16" VerticalAlignment="Center" />
+                <FontIcon Grid.Column="0" 
+                          Margin="12,12,11,12" 
+                          FontFamily="Segoe MDL2 Assets" 
+                          Glyph="{Binding Glyph}"
+                          Foreground="White" />
+                <TextBlock Grid.Column="1" 
+                           Text="{x:Bind Label}" 
+                           Foreground="White" 
+                           FontSize="16" 
+                           VerticalAlignment="Center" />
             </Grid>
         </DataTemplate>
 
@@ -24,8 +32,14 @@
                     <ColumnDefinition Width="48" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Source="{Binding Glyph}" Stretch="UniformToFill" Margin="12,12,11,12" />
-                <TextBlock Grid.Column="1" Text="{x:Bind Label}" Foreground="White" FontSize="16" VerticalAlignment="Center" />
+                <Image Source="{Binding Glyph}" 
+                       Stretch="UniformToFill" 
+                       Margin="12,12,11,12" />
+                <TextBlock Grid.Column="1" 
+                           Text="{x:Bind Label}" 
+                           Foreground="White" 
+                           FontSize="16" 
+                           VerticalAlignment="Center" />
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -47,17 +61,17 @@
             <!--Items-->
             <controls:HamburgerMenu.ItemsSource>
                 <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuGlyphItem Label="Big four summer heat" Glyph="/Assets/Photos/BigFourSummerHeat.png"></controls:HamburgerMenuGlyphItem>
-                    <controls:HamburgerMenuGlyphItem Label="Bison badlands Chillin" Glyph="/Assets/Photos/BisonBadlandsChillin.png"></controls:HamburgerMenuGlyphItem>
-                    <controls:HamburgerMenuGlyphItem Label="Giant slab in Oregon" Glyph="/Assets/Photos/GiantSlabInOregon.png"></controls:HamburgerMenuGlyphItem>
-                    <controls:HamburgerMenuGlyphItem Label="Lake Ann Mushroom" Glyph="/Assets/Photos/LakeAnnMushroom.png"></controls:HamburgerMenuGlyphItem>
+                    <controls:HamburgerMenuGlyphItem Label="Big four summer heat" Glyph="/Assets/Photos/BigFourSummerHeat.png"/>
+                    <controls:HamburgerMenuGlyphItem Label="Bison badlands Chillin" Glyph="/Assets/Photos/BisonBadlandsChillin.png"/>
+                    <controls:HamburgerMenuGlyphItem Label="Giant slab in Oregon" Glyph="/Assets/Photos/GiantSlabInOregon.png"/>
+                    <controls:HamburgerMenuGlyphItem Label="Lake Ann Mushroom" Glyph="/Assets/Photos/LakeAnnMushroom.png"/>
                 </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.ItemsSource>            
             
             <!--Options-->
             <controls:HamburgerMenu.OptionsItemsSource>
                 <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuGlyphItem Label="About" Glyph=""></controls:HamburgerMenuGlyphItem>
+                    <controls:HamburgerMenuGlyphItem Label="About" Glyph=""/>
                 </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.OptionsItemsSource>
             
@@ -68,7 +82,12 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Border Background="Black" Grid.Row="0">
-                    <TextBlock x:Name="Header" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{Binding Label}" Foreground="White"/>
+                    <TextBlock x:Name="Header" 
+                               FontSize="24" 
+                               HorizontalAlignment="Center" 
+                               VerticalAlignment="Center" 
+                               Text="{Binding Label}" 
+                               Foreground="White"/>
                 </Border>
                 <Image x:Name="Image" Grid.Row="1" Source="{Binding Glyph}" />
             </Grid>
