Update GridSplitter Sample Page and removing testing comments

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/GridSplitter/GridSplitterPage.xaml
@@ -16,37 +16,34 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition MinWidth="200"></ColumnDefinition>
-            <ColumnDefinition Width="11"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Column="0" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect with ColumnDefinition MinWidth="200" and MinHeight="100"</TextBlock>
-        <TextBlock Grid.Column="2" Grid.Row="0" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
+        <TextBlock Grid.Column="0" TextWrapping="Wrap" Margin="12,0">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect with ColumnDefinition MinWidth="200" and MinHeight="100"</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="0" TextWrapping="Wrap" Margin="12,0">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
+        <TextBlock Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Margin="12,0">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
 
         <TextBlock Grid.Column="0" Grid.Row="2" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="2" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
         <TextBlock Grid.Column="2" Grid.Row="2" TextWrapping="Wrap">This text to simulate the resizing feature of the Grid Splitter Control, try to move the splitter to see the effect</TextBlock>
 
         <!--Column Grid Splitter-->
         <controls:GridSplitter 
-            
                 Width="11"
                 Background="Gray"
+                HorizontalAlignment="Left"
                 Grid.Column="{Binding Column.Value}"
-                ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay}"
-                ResizeBehavior="{Binding ResizeBehavior.Value,Mode=TwoWay}"
-                Foreground="White" 
-                FontSize="13">
+                ResizeDirection="{Binding ResizeDirection.Value,Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}"
+                ResizeBehavior="{Binding ResizeBehavior.Value,Mode=TwoWay}">
         </controls:GridSplitter>
 
         <!--Row Grid Splitter-->
         <controls:GridSplitter 
-            Foreground="White"
             Grid.Row="1"
-            ResizeBehavior="BasedOnAlignment"
-            ResizeDirection="Auto"
-            Background="Gray" Height="11"
-            HorizontalAlignment="Stretch" 
-            FontSize="13">
+            Background="Gray"
+            Height="11"
+            HorizontalAlignment="Stretch" >
             <controls:GridSplitter.Element>
                 <Grid>
                     <TextBlock HorizontalAlignment="Center"     
